tests/errors/map_bare_arrow.vt
fn main() { let a: int[] = [1]; print(a.map((x) => x + 1).len); }
